<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/title1"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/car1"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/car2"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/title2"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/food1"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/food2"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/food3"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/food4"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/food6"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/food5"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/bnt"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>